# pokemon-embedding

./: README.md  code.ipynb  db.py  main.py  nickname_generator.py  pokemon_nicknames.db  pyproject.toml  test_pokebase.py
