[project]
name = "pokemon-embedding"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain-openai>=0.3.7",
    "langchain>=0.3.19",
    "pandas>=2.2.3",
    "pokebase>=1.4.1",
    "typer>=0.15.1",
    "rich>=13.9.4",
    "pydantic>=2.0.0",
    "term-image>=0.7.2",
    "climage>=0.2.2",
]

[tool.uv]
dev-dependencies = [
    "ipykernel>=6.29.5",
    "python-dotenv>=1.0.1",
    "ruff>=0.9.7",
]
